display value and last result overflow corrected

--- a/styles.css
+++ b/styles.css
@@ -77,19 +77,26 @@ h1 {
 }
 
 #calc-input {
-    max-width: 100%;
-    padding: 15px;
+    width: 350px;
+    padding: 45px;
     border-radius: 10px;
     text-align: right;
     height: 15px;
+    overflow: scroll;
+    direction: rtl;
+    overflow-y: hidden;
 }
 
 #last-result-input {
     max-width: 100%;
     height: 15px;
-    padding: 15px;
+    padding: 45px;
     border-radius: 10px;
     text-align: right;
+    overflow: scroll;
+    width: 350px;
+    direction: rtl;
+    overflow-y: hidden;
 }
 
 .footer-text{
